--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 ผลิตภัณฑ์
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Cloud Server</a>
+                                <a class="dropdown-item" href="product.html">Cloud Server</a>
                                 <a class="dropdown-item" href="#">Cloud Hosting</a>
                                 <a class="dropdown-item" href="#">Domain Name</a>
                                 <a class="dropdown-item" href="#">SSL</a>
@@ -722,7 +722,7 @@
                             <h3 class="f-20 text-center mb-0">ผลิตภัณฑ์</h3>
                             <div id="1" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    <a class="item" href="#">Cloud Server</a>
+                                    <a class="item" href="product.html">Cloud Server</a>
                                     <a class="item" href="#">Cloud Hosting</a>
                                     <a class="item" href="#">Domain Name</a>
                                     <a class="item" href="#">SSL</a>
@@ -781,7 +781,7 @@
 
                     <div class="col menu">
                         <h3 class="f-20  mb-0">ผลิตภัณฑ์</h3>
-                        <a class="item" href="#">Cloud Server</a>
+                        <a class="item" href="product.html">Cloud Server</a>
                         <a class="item" href="#">Cloud Hosting</a>
                         <a class="item" href="#">Domain Name</a>
                         <a class="item" href="#">SSL</a>
