--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="product.html">Cloud Server</a>
-                                <a class="dropdown-item" href="#">Cloud Hosting</a>
-                                <a class="dropdown-item" href="#">Domain Name</a>
-                                <a class="dropdown-item" href="#">SSL</a>
-                                <a class="dropdown-item" href="#">Storage</a>
-                                <a class="dropdown-item" href="#">Database</a>
+                                <a class="dropdown-item" href="product.html">Cloud Hosting</a>
+                                <a class="dropdown-item" href="product.html">Domain Name</a>
+                                <a class="dropdown-item" href="product.html">SSL</a>
+                                <a class="dropdown-item" href="product.html">Storage</a>
+                                <a class="dropdown-item" href="product.html">Database</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -63,12 +63,12 @@
                                 โซลูชั่น
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Gaming</a>
-                                <a class="dropdown-item" href="#">SAP</a>
-                                <a class="dropdown-item" href="#">E-Commerce</a>
-                                <a class="dropdown-item" href="#">IoT</a>
-                                <a class="dropdown-item" href="#">Web Hosting</a>
-                                <a class="dropdown-item" href="#">Digitals Marketing</a>
+                                <a class="dropdown-item" href="product.html">Gaming</a>
+                                <a class="dropdown-item" href="product.html">SAP</a>
+                                <a class="dropdown-item" href="product.html">E-Commerce</a>
+                                <a class="dropdown-item" href="product.html">IoT</a>
+                                <a class="dropdown-item" href="product.html">Web Hosting</a>
+                                <a class="dropdown-item" href="product.html">Digitals Marketing</a>
                             </div>
                         </li>
                         <li class="nav-item">
