--- a/product.html
+++ b/product.html
@@ -50,11 +50,11 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item active" href="product.html">Cloud Server</a>
-                                <a class="dropdown-item" href="#">Cloud Hosting</a>
-                                <a class="dropdown-item" href="#">Domain Name</a>
-                                <a class="dropdown-item" href="#">SSL</a>
-                                <a class="dropdown-item" href="#">Storage</a>
-                                <a class="dropdown-item" href="#">Database</a>
+                                <a class="dropdown-item" href="product.html">Cloud Hosting</a>
+                                <a class="dropdown-item" href="product.html">Domain Name</a>
+                                <a class="dropdown-item" href="product.html">SSL</a>
+                                <a class="dropdown-item" href="product.html">Storage</a>
+                                <a class="dropdown-item" href="product.html">Database</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -63,12 +63,12 @@
                                 โซลูชั่น
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Gaming</a>
-                                <a class="dropdown-item" href="#">SAP</a>
-                                <a class="dropdown-item" href="#">E-Commerce</a>
-                                <a class="dropdown-item" href="#">IoT</a>
-                                <a class="dropdown-item" href="#">Web Hosting</a>
-                                <a class="dropdown-item" href="#">Digitals Marketing</a>
+                                <a class="dropdown-item" href="product.html">Gaming</a>
+                                <a class="dropdown-item" href="product.html">SAP</a>
+                                <a class="dropdown-item" href="product.html">E-Commerce</a>
+                                <a class="dropdown-item" href="product.html">IoT</a>
+                                <a class="dropdown-item" href="product.html">Web Hosting</a>
+                                <a class="dropdown-item" href="product.html">Digitals Marketing</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -117,13 +117,106 @@
             </div>
         </nav>
     </header>
-    <section class="pt-100" id="customize">
+    <div class="jumbotron pt-100 pb-5" id="header-page">
+        <div class="container text-center">
+            <img src="images/product.png" class="img-fluid" style="padding: 50px 0">
+        </div>
+    </div>
+    <section id="product-service" class="pt-5 pb-5">
         <div class="container">
-            <h1 class="header-section">Spidy
-                <span class="header-section-sub">Server</span>
-            </h1>
-            <p>เซิร์ฟเวอร์คลาวด์ที่มีประสิทธิภาพในโครงสร้างพื้นฐานขององค์กรด้วยการจำลองเสมือนแบบ KVM</p>
+            <h3 class="header-section text-left pb-3">เลือกผลิตภัณฑ์ของคุณ</h3>
+            <ul class="row nav nav-tabs" id="myTab" role="tablist">
+                <li class="col nav-item">
+                    <a class="nav-link active" id="cloud-server-tab" data-toggle="tab" href="#cloud-server" role="tab" aria-controls="cloud-server"
+                        aria-selected="true">
+                        <img src="images/i-cloud.png" alt="" class="img-fluid" width="60px">
+                    </a>
+                </li>
+                <li class="col nav-item">
+                    <a class="nav-link" id="hosting-tab" data-toggle="tab" href="#hosting" role="tab" aria-controls="hosting" aria-selected="false">
+                        <img src="images/i-host.png" alt="" class="img-fluid" width="60px">
+                    </a>
+                </li>
+                <li class="col nav-item">
+                    <a class="nav-link" id="https-tab" data-toggle="tab" href="#https" role="tab" aria-controls="https" aria-selected="false">
+                        <img src="images/i-https.png" alt="" class="img-fluid" width="60px">
+                    </a>
+                </li>
+                <li class="col nav-item">
+                    <a class="nav-link" id="ssl-tab" data-toggle="tab" href="#ssl" role="tab" aria-controls="ssl" aria-selected="false">
+                        <img src="images/i-ssl.png" alt="" class="img-fluid" width="60px">
+                    </a>
+                </li>
+                <li class="col nav-item">
+                    <a class="nav-link" id="server-tab" data-toggle="tab" href="#server" role="tab" aria-controls="server" aria-selected="false">
+                        <img src="images/i-server.png" alt="" class="img-fluid" width="60px">
+                    </a>
+                </li>
+                <li class="col nav-item">
+                    <a class="nav-link" id="database-tab" data-toggle="tab" href="#database" role="tab" aria-controls="database" aria-selected="false">
+                        <img src="images/i-database.png" alt="" class="img-fluid" width="60px">
+                    </a>
+                </li>
+            </ul>
+            <div class="tab-content text-dark" id="nav-tabContent">
+                <div class="tab-pane fade show pt-3 active" id="cloud-server" role="tabpanel" aria-labelledby="cloud-server-tab">
+                    <img src="images/i-cloud.png" alt="">
+                    <h2 class="text-center color-theme">Cloud Server</h2>
+                    <p class="text-center f-20 color-theme">
+                        บริการ Cloud Server ให้คำปรึกษาและวางแผนค่าใช้จ่าย รวมถึงบริการติดตั้งและดูแลระบบ โดยมีความความชำนาญในการจัดทำโซลูชันให้ตอบโจทย์
+                        และครอบคลุมทุกความต้องการ พร้อมวางแผนกลยุทธ์ ออกแบบ ติดตั้ง และดูแลระบบตลอด 24 ชม. เพื่อให้คุณสามารถใช้เทคโนโลยีคลาวด์ได้อย่างมีประสิทธิภาพและคุ้มค่า
+                    </p>
 
+                </div>
+                <div class="tab-pane fade pt-3" id="hosting" role="tabpanel" aria-labelledby="hosting-tab">
+                    <img src="images/i-host.png" alt="">
+                    <h2 class="text-center color-theme">Web Hosting</h2>
+                    <p class="text-center f-20 color-theme">
+                        บริการ Cloud Server ให้คำปรึกษาและวางแผนค่าใช้จ่าย รวมถึงบริการติดตั้งและดูแลระบบ โดยมีความความชำนาญในการจัดทำโซลูชันให้ตอบโจทย์
+                        และครอบคลุมทุกความต้องการ พร้อมวางแผนกลยุทธ์ ออกแบบ ติดตั้ง และดูแลระบบตลอด 24 ชม. เพื่อให้คุณสามารถใช้เทคโนโลยีคลาวด์ได้อย่างมีประสิทธิภาพและคุ้มค่า
+                    </p>
+                </div>
+                <div class="tab-pane fade pt-3" id="https" role="tabpanel" aria-labelledby="https-tab">
+                    <img src="images/i-https.png" alt="">
+                    <h2 class="text-center color-theme">HTTPS</h2>
+                    <p class="text-center f-20 color-theme">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus cumque facere mollitia, error eveniet repellendus. Maxime
+                        natus in nostrum commodi? Sed maxime animi totam fugiat facilis praesentium nobis explicabo porro.
+                    </p>
+                </div>
+                <div class="tab-pane fade pt-3" id="ssl" role="tabpanel" aria-labelledby="ssl-tab">
+                    <img src="images/i-ssl.png" alt="">
+                    <h2 class="text-center color-theme">SSL</h2>
+                    <p class="text-center f-20 color-theme">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, facilis inventore deserunt quae fugiat sunt quis perferendis
+                        necessitatibus aliquam recusandae! Aperiam sint aut at! Vitae error perspiciatis esse repudiandae
+                        nisi?
+                    </p>
+                </div>
+                <div class="tab-pane fade pt-3" id="server" role="tabpanel" aria-labelledby="server-tab">
+                    <img src="images/i-server.png" alt="">
+                    <h2 class="text-center color-theme">Server</h2>
+                    <p class="text-center f-20 color-theme">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium sed nemo placeat commodi sint aliquid consectetur assumenda
+                        dicta cupiditate, modi ipsam cumque. Facere in debitis consequatur, fugiat rerum ipsa porro?
+                    </p>
+                </div>
+                <div class="tab-pane fade pt-3" id="database" role="tabpanel" aria-labelledby="database-tab">
+                    <img src="images/i-database.png" alt="">
+                    <h2 class="text-center color-theme">Database</h2>
+                    <p class="text-center f-20 color-theme">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, nam? Et, accusamus minus, soluta beatae ipsa vitae aliquam
+                        porro saepe quasi quam dicta dolorum harum quo dolor voluptatum. Facilis, quae!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="pt-3" id="customize">
+        <div class="container">
+            <h3 class="header-section text-left">
+                <span class="header-section-sub">เลือกความต้องการของคุณ</span>
+            </h3>
             <h6>ระบบปฎิบัติการ</h6>
             <ul class="os-slider">
                 <li class="oslist">
