--- a/product.html
+++ b/product.html
@@ -119,7 +119,7 @@
     </header>
     <div class="jumbotron pt-100 pb-5" id="header-page">
         <div class="container text-center">
-            <img src="images/product.png" class="img-fluid" style="padding: 50px 0">
+            <img src="images/product_title.png" class="img-fluid" style="padding: 50px 0">
         </div>
     </div>
     <section id="product-service" class="pt-5 pb-5">
