--- a/contact.html
+++ b/contact.html
@@ -178,14 +178,18 @@
                                 <input type="radio" id="2" name="11" class="custom-control-input">
                                 <label class="custom-control-label" for="2">หญิง</label>
                             </div>
-                            <p class="text-warning pt-3">คุณรู้จัก Spidybase หรือไม่</p>
+                            <p class="text-warning pt-3">คุณรู้จัก Spidybase ได้อย่างไร</p>
                             <div class="custom-control custom-radio custom-control-inline">
                                 <input type="radio" id="3" name="22" class="custom-control-input">
-                                <label class="custom-control-label" for="3">รู้จัก</label>
+                                <label class="custom-control-label" for="3">โฆษณา</label>
                             </div>
                             <div class="custom-control custom-radio custom-control-inline">
                                 <input type="radio" id="4" name="22" class="custom-control-input">
-                                <label class="custom-control-label" for="4">ไม่รู้จัก</label>
+                                <label class="custom-control-label" for="4">E-mail</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="7" name="22" class="custom-control-input">
+                                <label class="custom-control-label" for="7">อื่นๆ</label>
                             </div>
                             <p class="text-warning pt-3">คุณเคยใช้บริการ Cloud หรือไม่</p>
                             <div class="custom-control custom-radio custom-control-inline">
@@ -288,7 +292,7 @@
             </div>
         </div>
     </section>
-    <footer class="pt-4 pb-2">
+    <footer class="pt-4 pb-1">
         <div class="container">
             <div class="row device-sm">
                 <div class="col-lg text-center">
