--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="row">
                 <div class="col-md-2 text-left">
                     <p class="req-os-text">vCPUs
-                        <i class="fa fa-info-circle text-warning" data-toggle="tooltip" data-placement="right" title="Tooltip on right"></i>
+                        <i class="fa fa-info-circle text-warning" data-toggle="tooltip" data-placement="right" title="เลือกจำนวน cpu ที่คุณต้องการประมวณผลt"></i>
                     </p>
 
                 </div>
@@ -249,7 +249,7 @@
             <div class="row">
                 <div class="col-md-2 text-left">
                     <p class="req-os-text">Memory
-                        <i class="fa fa-info-circle text-warning" data-toggle="tooltip" data-placement="right" title="Tooltip on right"></i>
+                        <i class="fa fa-info-circle text-warning" data-toggle="tooltip" data-placement="right" title="เลือกจำนวนพื้นที่หน่วยความจำในการประมวณผลของคุณ"></i>
                     </p>
                 </div>
                 <div class="col">
@@ -709,7 +709,7 @@
             </div>
         </div>
     </section>
-    <footer class="pt-4 pb-2">
+    <footer class="pt-4 pb-1">
         <div class="container">
             <div class="row device-sm">
                 <div class="col-lg text-center">
